[package]
name = "kaitai-derive"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = "1.0"
heck = "0.3"
kaitai-codegen = { path = "../kaitai-codegen" }
syn = "1.0"

[dev-dependencies]
trybuild = "1.0"
