[package]
name = "kaitai-loader"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
schemafy_core = "0.5.0"
heck = "0.3"

[dev-dependencies]
serde_json = "1.0"
difference = "2.0"
